--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -54,7 +54,7 @@
 
 		    <div class="col-md-offset-4 col-md-4">
 		        <div class="login">
-		            <h4 class="text-center">{% trans 'S enregistrer via' %}</h4>
+		            <h4 class="text-center">{% trans 'Créer un compte' %}</h4>
 		                    
 		              <div class="box">
 		                   <div class="content">
@@ -117,7 +117,7 @@
 		                           {% if redirect_field_value %}
 										<input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
 									{% endif %}
-		                                <button class="btn btn-sm btn-primary btn-login" type="submit">{% trans "Créer un compte" %}</button>
+		                                <button class="btn btn-sm btn-primary btn-login" type="submit">{% trans "Enregistrer" %}</button>
 
 		                        </form>
 		                    </div>
