--- a/templates/account/password_set.html
+++ b/templates/account/password_set.html
@@ -53,7 +53,7 @@
 			    <form method="POST" action="{% url 'account_set_password' %}" class="password_set">
 			        {% csrf_token %}
 			        {{ form.as_p|add_class:'form-control'}}
-			        <input type="submit" name="action" value="{% trans 'Set Password' %}"/>
+			        <input type="submit" name="action" value="{% trans 'Valider' %}"/>
 			    </form>
 			</div>  
         </div>  
