--- a/templates/restaurant/restaurant_publish_list.html
+++ b/templates/restaurant/restaurant_publish_list.html
@@ -32,7 +32,7 @@
                 <div class="row" id="modal-recipe">
                     
                     <div class="col-lg-12">
-                        <h2>Bons plans publiés</h2>
+                        <h2>Les bonnes adresses publiés</h2>
                         <div class="table-responsive">
                             <table class="table table-bordered table-hover table-striped">
                                 <thead>
@@ -41,9 +41,6 @@
                                         <th>{% trans 'Publié le' %}</th>
                                         <th>{% trans 'Catégorie' %}</th>
                                         <th>{% trans 'Nom' %}</th>
-                                        <th>{% trans 'Vues' %}</th>
-                                        <th>Likes</th>
-                                        <th>{% trans 'Auteur' %}</th>
                                         <th>Actions</th>
                                     </tr>
                                 </thead>
@@ -55,7 +52,7 @@
                                         <td>{{restaurant.created_at|date:'F j, Y'}}</td>
                                         <td><a href="">{{restaurant.category.name}}</a></td>
                                         <td><a href="{% url 'restaurant_preview' slug=restaurant.slug %}">{{restaurant.name}}</a></td>
-                                        <td><a href="">{{restaurant.author}}</a></td>
+                                        
                                         <td>
                                             <a href="javascript:;" data-toggle="collapse" data-target="#action_{{restaurant.id}}"><i class="fa fa-fw fa-arrows-v"></i> Actions <i class="fa fa-fw fa-caret-down"></i></a>
                                             <ul id="action_{{restaurant.id}}" class="collapse">
